# vishguard

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements-gpu.txt  requirements.txt
artifacts/reports/: t1_1_antispoof_results.json  t1_2_llm_json_results.json  t1_3_whisper_wer_results.json  t3_2_antispoof_metrics.csv  t3_4_tactic_metrics.csv  t3_5_wer_results.csv  t3_6_latency_summary.csv  t3_6_latency_timings.csv
configs/: default.yaml
docs/: AI_TOOLS.md  ARCHITECTURE.md  DEMO_SCRIPT.md  FAILURES.md  PRD.md  PRESENTATION_SCRIPT.md  TASKS.md  vishguard_slides.pptx
eval/: buildSpoofSet.py  buildTacticSet.py  runAsrEval.py  runLatencyBench.py  runSpoofEval.py  runTacticEval.py
eval/data/: tactics.jsonl
notebooks/: 00_colabSetup.ipynb  01_spike_antiSpoof.ipynb  02_spike_llmJson.ipynb  03_spike_whisperWer.ipynb  04_phase3_eval.ipynb  05_colabDemo.ipynb
scripts/: makeDemoAudio.py
src/vishguard/: __init__.py  antiSpoof.py  asrWhisper.py  briefingTts.py  cli.py  loadAudio.py  orchestrator.py  promptLibrary.py  reportSchema.py  riskSynthesis.py  tacticClassifier.py  types.py
src/vishguard/ui/: __init__.py  pageReport.py
tests/: testAntiSpoof.py  testAsr.py  testEvalBuildSpoofSet.py  testEvalBuildTacticSet.py  testEvalRunAsrEval.py  testEvalRunLatencyBench.py  testEvalRunSpoofEval.py  testEvalRunTacticEval.py  testIngestion.py  testReportSchema.py  testRiskSynthesis.py  testTacticClassifier.py  testUiPageReport.py
